# Talky

./: README.md  docker-compose.yml
backend/: Cargo.toml  Dockerfile  bacon.toml  mongoTalky.js
backend/migrations/: 0007_add_owner_role.sql  01_setup.sql  02_create_users.sql  03_create_servers.sql  04_create_server_members.sql  05_create_channels.sql  06_create_invitations.sql
backend/src/: lib.rs  main.rs  tests.rs
backend/src/config/database/: mod.rs  mongo.rs  postgre.rs
backend/src/dto/: channel_dto.rs  invitations_dto.rs  message_schema_input.rs  message_schema_response.rs  mod.rs  server_dto.rs  server_member.rs  user.rs
backend/src/models/: channel.rs  invitations.rs  message.rs  mod.rs  server.rs  user.rs
backend/src/openapi/: types.rs
backend/src/routes/: mod.rs  test.rs
backend/src/routes/auth/: auth.rs  mod.rs
backend/src/routes/channel/: channel.rs  mod.rs
backend/src/routes/invitation/: invitations.rs  mod.rs
backend/src/routes/message/: handlers.rs  mod.rs
backend/src/routes/server/: mod.rs  server.rs
backend/src/routes/ws/: handlers.rs  mod.rs
backend/src/services/: channel_services.rs  invitations_services.rs  message_service.rs  mod.rs  permissions.rs  server_services.rs  user_services.rs
backend/tests/: integration_test.rs
database/: psqlTalky.sql
frontend/: Dockerfile  package-lock.json  package.json
frontend/src/: App.jsx  index.css  main.jsx
frontend/src/assets/: index.js
frontend/src/config/: axiosConfig.js
frontend/src/constants/: style.js
frontend/src/hooks/: useMessages.js  useParticipants.js  (+1 more)
(+27 files in other folders)
