[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8", features = ["ws"]}
rand = "0.8"
tokio = { version = "1", features = ["full"] }
tower = { version = "0.4", features = ["full"] }
tower-http = { version = "0.6", features = ["cors", "trace"] }  

sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "uuid", "chrono", "migrate"] }  

mongodb = "3"
bson = { version = "2.9", features = ["chrono-0_4", "uuid-1"]}

serde = { version = "1.0", features = ["derive"] }                                                                                                                                     
serde_json = "1.0" 

uuid = { version = "1.6", features = ["serde", "v4"] }
chrono = { version = "0.4", features = ["serde"] }

bcrypt = "0.15"
jsonwebtoken = "9.2"

validator = { version = "0.18", features = ["derive"] }
                                                                                                                                                              
dotenvy = "0.15"    

tracing = "0.1"                                                                                                                                                                      
tracing-subscriber = "0.3"

thiserror = "1.0"
anyhow = "1.0"
utoipa = { version="5", features = ["uuid","axum_extras"]}
utoipa-swagger-ui = {version="9", features=["axum"]}

async-trait = "0.1"
futures = "0.3.31"
